// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages view operator groups should render correctly on operator group 1`] = `
<BaseLayout
  description="View and edit your operator groups."
  referer="hello"
  showNavigation={true}
  title="Operator Groups - Create Fares Data Service"
>
  <div>
    <ErrorSummary />
  </div>
  <div
    className="govuk-grid-row"
    data-card-count={1}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation
        isDevOrTest={false}
      />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Operator Groups
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define a group of operators for use in a multioperator product
      </p>
      <div>
        <div
          className="card-row"
        >
          <OperatorGroupCard
            defaultChecked={false}
            deleteActionHandler={[Function]}
            index={0}
            key="1"
            operatorGroup={
              Object {
                "id": 1,
                "name": "first operator group",
                "operators": Array [
                  Object {
                    "name": "First operator",
                    "nocCode": "FOP",
                  },
                ],
              }
            }
          />
        </div>
        <a
          aria-disabled={true}
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/searchOperators"
        >
          Add a operator group
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;

exports[`pages view operator groups should render correctly when no operator groups 1`] = `
<BaseLayout
  description="View and edit your operator groups."
  referer={null}
  showNavigation={true}
  title="Operator Groups - Create Fares Data Service"
>
  <div>
    <ErrorSummary />
  </div>
  <div
    className="govuk-grid-row"
    data-card-count={0}
  >
    <div
      className="govuk-grid-column-one-quarter"
    >
      <SubNavigation
        isDevOrTest={false}
      />
    </div>
    <div
      className="govuk-grid-column-three-quarters"
    >
      <h1
        className="govuk-heading-xl"
      >
        Operator Groups
      </h1>
      <p
        className="govuk-body govuk-!-margin-bottom-8"
      >
        Define a group of operators for use in a multioperator product
      </p>
      <div>
        <NoOperatorGroups />
        <a
          aria-disabled={true}
          className="govuk-button govuk-button"
          data-module="govuk-button"
          href="/searchOperators"
        >
          Add a operator group
        </a>
      </div>
    </div>
  </div>
</BaseLayout>
`;
